[package]
name = "peyvand"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5.*", features = ["derive"] }
strum = { version = "0.27.*", features = ["derive"] }
strum_macros = "0.27.*"
spdlog-rs = "0.4.*"
anyhow = "1.0.*"
signal-hook = {version = "0.3.*", features = ["extended-siginfo"] }
libc = "0.2.*"
tao = "0.34.*"
wry = "0.53.*"
toml = "0.9.*"
